# ai-tutor

./: .gitignore  Justfile  README.md  analytics_notes.md  deploy.yaml  dev.env  develop.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.bak  pyproject.toml  pyproject.toml.bak  pyrightconfig.json  pytest.ini  requirements-dev.txt  send_files.sh  stage.yaml  svelte_dev.yaml  template.env  test.yaml  testing.txt  uv.lock.bak
.github/: CODEOWNERS
backend/: Dockerfile  ai.py  compose.yaml  config.py  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  responses.py  testing.Dockerfile
compose/: mongo.yaml  traefik.yaml  whoami.yaml
data/: README.md  all_courses_data.json  uvu_all_courses_data.json
dev/: apikey.py  keys.json  mongo-dev-init.js  mongo-init.js  users.json
doc/: README.md  backend-api.md  capstone.typ  commit_log.txt  completion_timeline.typ  meeting-notes.md  privacy-policy.md  project-proposal.md  report.md  report.typ  scope-statement.md  spencer_team_survey.md  technical_report.typ  user_schema.jsonc
explore/: main.py
extension/: README.md  background.js  bootstrap_explore.js  inspect_canvas_api.js  manifest.json  package-lock.json  package.json  popup.html  sidepanel.html  template.env  webpack.config.js
frontend/: .gitignore  pubspec.yaml
logger/: Logger.py
markdown_svelte/: package.json  pnpm-lock.yaml
mongo/: compose.yaml  example_user.jsonc  mongo-dev-init.js  mongo-init.js
plausible/: compose.yaml
playground/: pubspec.yaml
python_sandbox/: Dockerfile  compose.yaml  main.py  (+2 more)
(+204 files in other folders)
